Fixed large modals with an inner overflow

--- a/src/stylus/components/_modals.styl
+++ b/src/stylus/components/_modals.styl
@@ -2,13 +2,12 @@
   display: block
   position: relative
   min-width: 280px
-  max-width: 80%
-  max-height: 80%
+  max-width: 90%
+  max-height: 90%
   margin: auto
   z-index: 1001
   transition: .3s ease-in-out
-  max-height: 55%
-  overflow: hidden
+  overflow: auto
   @extend .z-depth-3
   
   &--bottom
