--- a/src/stylus/components/_overlay.styl
+++ b/src/stylus/components/_overlay.styl
@@ -11,10 +11,11 @@
   opacity: 0
   filter: blur(10%)
   z-index: -1
-  
+  overflow: auto
+
   &--active
     opacity: 1
     z-index: 1000
-    
+
   &--modal-bottom
     align-items: flex-end
